# Studai

./: .gitignore  Cargo.toml  backend.md  requirements.txt
ai/: llm_bridge.py  pdf_generator.py  whisper_bridge.py
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
backend/src/ai/: llm.rs  mod.rs  pdf.rs  whisper.rs
backend/src/handlers/: health.rs  mod.rs  transcribe.rs  ws.rs
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.tsx  index.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: lib.rs
frontend/src/components/: Sidebar.tsx
frontend/src/components/transcription/: DropZone.tsx  JobProgress.tsx  TranscriptionView.tsx
frontend/src/hooks/: useTranscription.ts  useWebSocket.ts
frontend/src/lib/: api.ts
frontend/src/pages/: Home.tsx
frontend/src/store/: appStore.ts
frontend/src/types/: index.ts
scripts/: dev.ps1
