[package]
name = "studai"
version = "0.1.0"
edition = "2026"

[dependencies]
axum = { version = "0.7", features = ["multipart", "ws"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
uuid = { version = "1", features = ["v4", "serde"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "macros", "migrate"] }
rayon = "1.8"
pyo3 = { version = "0.21", features = ["auto-initialize"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"

[dev-dependencies]
axum-test = "14"