[package]
name = "studai_backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "studai_backend"
path = "src/lib.rs"

[dependencies]
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
uuid = { version = "1", features = ["v4", "serde"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "macros", "migrate"] }
rayon = "1.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
futures-util = "0.3.32"

whisper-rs = "0.11"
symphonia = { version = "0.5", features = ["all"] }
rubato = "0.14"
printpdf = "0.7"
chrono = "0.4"
